--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
 
 </head>
 <body>
-    <!-- Hero Section -->
-<section id="hero">Hero Section</section>
+<!-- Hero Section -->
+<section id="hero">
+    <div class="container text-center text-white d-flex flex-column justify-content-center align-items-center">
+    <h1 class="display-3 fw-bold">
+     ColorCrest <span class="text-yellow">Paints</span>
+    </h1>
 
-<!-- Product Categories -->
-<section id="products">Products</section>
+    <h3 class="mt-3 text-light fw-semibold" style="font-family: 'Segoe UI', sans-serif;">
+  Bring Your Walls to Life
+</h3>
+<p class="text-light" style="font-family: 'Segoe UI', sans-serif; font-size: 1.1rem;">
+  Discover our professional-grade paints and coatings that bring your vision to life with lasting beauty and protection.
+</p>
 
-<!-- Why Choose Us -->
-<section id="why-us">Why Choose Us</section>
+    <a href="#products" class="btn btn-primary btn-lg mt-4">Explore Colors</a>
+</div>
 
-<!-- Contact -->
-<section id="contact">Contact Form</section>
-
-<!-- Footer -->
-<footer>Footer Content</footer>
+</section>
+ 
 
 </body>
 </html>
