--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" >
 
 </head>
 <body>
@@ -14,7 +15,7 @@
 <section id="hero">
     <div class="container text-center text-white d-flex flex-column justify-content-center align-items-center">
     <h1 class="display-3 fw-bold">
-     ColorCrest <span class="text-yellow">Paints</span>
+     ColorCrest <span class="text-blue">Paints</span>
     </h1>
 
     <h3 class="mt-3 text-light fw-semibold" style="font-family: 'Segoe UI', sans-serif;">
@@ -28,7 +29,67 @@
 </div>
 
 </section>
- 
+
+<!-- Product Categories -->
+<section id="products" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-4 fw-bold display-5">Our Products Categories</h2>
+    <h4 class="text-center mb-5 text-secondary ">Explore our comprehensive range of premium paints and coatings designed for every project need.</h4>
+    <div class="row g-4">
+      
+      <!-- Interior Paints -->
+      <div class="col-md-3 col-sm-6">
+  <div class="card h-100 text-center">
+    <img src="./interior-paint.jpg" class="card-img-top" alt="Interior Paints">
+    <div class="card-body">
+      <h5 class="card-title">Interior Paints</h5>
+      <p>Transform your indoor spaces with our premium interior paint collection</p>
+      <a href="#" class="btn btn-primary">Learn More</a>
+    </div>
+  </div>
+</div>
+
+      
+      <!-- Exterior Paints -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 text-center">
+          <img src="./exterior-paint.jpg" class="card-img-top" alt="Exterior Paints">
+          <div class="card-body">
+            <h5 class="card-title">Exterior Paints</h5>
+            <p>Weather-resistant solutions for lasting outdoor beauty</p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Wood Coatings -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 text-center">
+          <img src="./wood-paint.jpg" class="card-img-top" alt="Wood Coatings">
+          <div class="card-body">
+            <h5 class="card-title">Wood Coatings</h5>
+            <p>Specialized coatings to protect and enhance natural wood</p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Metal Paints -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 text-center">
+          <img src="./metal-paint.jpg" class="card-img-top" alt="Metal Paints">
+          <div class="card-body">
+            <h5 class="card-title">Metal Paints</h5>
+            <p>Durable metal protection with industrial-grade performance</p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
 </body>
 </html>
