--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" >
 
@@ -25,13 +24,13 @@
   Discover our professional-grade paints and coatings that bring your vision to life with lasting beauty and protection.
 </p>
 
-    <a href="#products" class="btn btn-primary btn-lg mt-4">Explore Colors</a>
+    <a href="#products" class="btn btn-primary rounded btn-lg mt-4">Explore Colors</a>
 </div>
 
 </section>
 
 <!-- Product Categories -->
-<section id="products" class="py-5">
+<section id="products" class="py-5 mt-3 mb-3">
   <div class="container">
     <h2 class="text-center mb-4 fw-bold display-5">Our Products <span class="text-blue">Categories</span> </h2>
     <h4 class="text-center mb-5 text-secondary ">Explore our comprehensive range of premium paints and coatings designed for every project need.</h4>
@@ -44,7 +43,7 @@
     <div class="card-body">
       <h4 class="card-title">Interior Paints</h4>
       <p>Transform your indoor spaces with our premium interior paint collection</p>
-      <a href="#" class="btn btn-primary">Learn More</a>
+      <button href="#" class="learnM btn btn-light rounded border-secondary">Learn More</button>
     </div>
   </div>
 </div>
@@ -57,7 +56,7 @@
           <div class="card-body">
             <h4 class="card-title">Exterior Paints</h4>
             <p>Weather-resistant solutions for lasting outdoor beauty</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <button href="#" class="learnM btn btn-light rounded border-secondary">Learn More</button>
           </div>
         </div>
       </div>
@@ -69,7 +68,7 @@
           <div class="card-body">
             <h4 class="card-title">Wood Coatings</h4>
             <p>Specialized coatings to protect and enhance natural wood</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <button href="#" class="learnM btn btn-light rounded border-secondary">Learn More</button>
           </div>
         </div>
       </div>
@@ -81,7 +80,7 @@
           <div class="card-body">
             <h4 class="card-title">Metal Paints</h4>
             <p>Durable metal protection with industrial-grade performance</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <button href="#" class="learnM btn btn-light rounded border-secondary">Learn More</button>
           </div>
         </div>
       </div>
@@ -159,26 +158,26 @@
       <!-- Message Form -->
       <div class="col-md-6 ">
         <div class=" shadow rounded p-4 h-100" style="background-color: white;">
-          <form class="mx-auto " style="max-width: 600px; ">
+          <form id="contactForm" class="mx-auto " style="max-width: 600px;  ">
             <h4 class="mb-4">Send Us Message</h4>
             <div class="mb-3 row">
   <div class="col-md-6">
     <label for="firstName" class="form-label">First Name</label>
-    <input type="text" class="form-control" id="firstName" placeholder="Enter first name">
+    <input type="text" class="form-control" id="firstName" placeholder="Enter first name" required>
   </div>
   <div class="col-md-6">
     <label for="lastName" class="form-label ">Last Name</label>
-    <input type="text" class="form-control" id="lastName" placeholder="Enter last name">
+    <input type="text" class="form-control" id="lastName" placeholder="Enter last name" required>
   </div>
 </div>
 
             <div class="mb-3" >
               <label for="email" class="form-label">Email Address</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter your email">
+              <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
             </div>
             <div class="mb-3" >
               <label for="message" class="form-label">Message</label>
-              <textarea class="form-control" id="message" rows="4" placeholder="Write your message"></textarea>
+              <textarea class="form-control" id="message" rows="4" placeholder="Write your message" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary w-100">Send Message</button>
           </form>
@@ -187,7 +186,7 @@
 
       <!-- Contact Info -->
       <div class="col-md-6">
-        <div class="ps-md-5"> <!-- padding-left for spacing on medium+ screens -->
+        <div class="ps-md-5">  
           <h4 class="mb-4">Contact Information</h4>
 
           <ul class="list-unstyled">
@@ -228,23 +227,87 @@
 </section>
 
 <!-- Footer -->
-<footer class="text-white py-4" style="background: linear-gradient(to right, #4facfe, #00f2fe);">
-  <div class="container text-center">
-    <p class="mb-2">&copy; 2025 ColorCrest Paints. All Rights Reserved.</p>
-    <div>
-      <a href="#" class="text-white mx-2 text-decoration-none">Privacy Policy</a> |
-      <a href="#" class="text-white mx-2 text-decoration-none">Terms of Service</a> |
-      <a href="#contact" class="text-white mx-2 text-decoration-none">Contact</a>
+<!-- Font Awesome (for icons) -->
+ 
+<footer class="bg-dark text-light pt-5 pb-3">
+  <div class="container">
+    <div class="row">
+      
+      <!-- Company Info -->
+      <div class="col-md-4 mb-4">
+        <h1 class="fw-bold">
+          <span class="text-white">ColorCrest</span> <span class="text-warning">Paints</span>
+        </h1>
+        <p class="medium">
+          Transforming spaces with premium quality paints and coatings.<br>
+          Your trusted partner for professional painting solutions.
+        </p>
+
+        <!-- Social Icons -->
+        <div class="mt-4">
+          <a href="#" class="text-light me-3"><i class="fab fa-facebook-f fa-2x"></i></a>
+          <a href="#" class="text-light me-3"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#" class="text-light me-3"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="#" class="text-light"><i class="fab fa-linkedin-in fa-2x"></i></a>
+        </div>
+      </div>
+
+      <!-- Links Section (Quick Links + Products + Support) -->
+      <div class="col-md-8">
+        <div class="row">
+          
+          <!-- Quick Links -->
+          <div class="col-md-4 mb-4">
+            <h5 class="fw-bold">Quick Links</h5>
+            <ul class="list-unstyled fs-6">
+              <li><a href="#" class="text-light text-decoration-none">Home</a></li>
+              <li><a href="#" class="text-light text-decoration-none">Products</a></li>
+              <li><a href="#" class="text-light text-decoration-none">About Us</a></li>
+              <li><a href="#" class="text-light text-decoration-none">Contact</a></li>
+              <li><a href="#" class="text-light text-decoration-none">Color Guide</a></li>
+            </ul>
+          </div>
+
+          <!-- Products -->
+          <div class="col-md-4 mb-4">
+            <h5 class="fw-bold">Products</h5>
+            <ul class="list-unstyled fs-6">
+              <li><a href="#products" class="text-light text-decoration-none">Interior Paints</a></li>
+              <li><a href="#products" class="text-light text-decoration-none">Exterior Paints</a></li>
+              <li><a href="#products" class="text-light text-decoration-none">Wood Coatings</a></li>
+              <li><a href="#products" class="text-light text-decoration-none">Metal Paints</a></li>
+            </ul>
+          </div>
+
+          <!-- Support -->
+          <div class="col-md-4 mb-4">
+            <h5 class="fw-bold">Support</h5>
+            <ul class="list-unstyled fs-6">
+              <li><a href="#" class="text-light text-decoration-none">Help Center</a></li>
+              <li><a href="#" class="text-light text-decoration-none">Paint Calculator</a></li>
+              <li><a href="#" class="text-light text-decoration-none">Installation Guide</a></li>
+              <li><a href="#" class="text-light text-decoration-none">Warranty</a></li>
+              <li><a href="#" class="text-light text-decoration-none">Returns</a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
     </div>
-    <div class="mt-3">
-      <a href="#" class="text-white mx-2"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="text-white mx-2"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="text-white mx-2"><i class="bi bi-twitter"></i></a>
+
+    <!-- Divider -->
+    <hr class="border-secondary my-3">
+
+    <!-- Bottom Text -->
+    <div class="text-center small">
+      © 2024 ColorCrest Paints. All rights reserved. |
+      <a href="#" class="text-light text-decoration-none">Privacy Policy</a> |
+      <a href="#" class="text-light text-decoration-none">Terms of Service</a>
     </div>
   </div>
 </footer>
 
-
+    <script src="script.js"></script>
 
 </body>
 </html>
