--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ColorCrest Paints — Premium Paints & Coatings</title>
     <meta name="description" content="ColorCrest Paints — premium interior, exterior, wood & metal coatings. Eco-friendly, long-lasting,  quick-dry solutions.">
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
             <div class="row g-4">
 
                 <!-- Interior Paints -->
-                <div class="col-md-3 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
                         <img src="./interior-paint.jpg" class="card-img-top " alt="Interior Paints">
                         <div class="card-body">
@@ -63,7 +63,7 @@
 
 
                 <!-- Exterior Paints -->
-                <div class="col-md-3 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
                         <img src="./exterior-paint.jpg" class="card-img-top" alt="Exterior Paints">
                         <div class="card-body">
@@ -75,7 +75,7 @@
                 </div>
 
                 <!-- Wood Coatings -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
                         <img src="./wood-paint.jpg" class="card-img-top" alt="Wood Coatings">
                         <div class="card-body">
@@ -87,7 +87,7 @@
                 </div>
 
                 <!-- Metal Paints -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
                         <img src="./metal-paint.jpg" class="card-img-top" alt="Metal Paints">
                         <div class="card-body">
@@ -108,7 +108,7 @@
             <!-- Cards Row -->
             <div class="row">
                 <!-- Card 1 -->
-                <div class="col-md-3 mb-4">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card bg-transparent border-0 h-100 text-center d-flex flex-column">
                         <div class="card-body d-flex flex-column align-items-center">
                             <i class="fa-solid fa-medal fa-4x mb-3" style="color: #FFD43B;"></i>
@@ -120,7 +120,7 @@
                 </div>
 
                 <!-- Card 2 -->
-                <div class="col-md-3 mb-4">
+               <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card bg-transparent border-0 h-100 text-center d-flex flex-column">
                         <div class="card-body d-flex flex-column align-items-center">
                             <i class="fa-solid fa-leaf fa-4x mb-3" style="color: #FFD43B;"></i>
@@ -132,7 +132,7 @@
                 </div>
 
                 <!-- Card 3 -->
-                <div class="col-md-3 mb-4">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card bg-transparent border-0 h-100 text-center d-flex flex-column">
                         <div class="card-body d-flex flex-column align-items-center">
                             <i class="fa-solid fa-circle-check fa-4x mb-3" style="color: #FFD43B;"></i>
@@ -144,7 +144,7 @@
                 </div>
 
                 <!-- Card 4 -->
-                <div class="col-md-3 mb-4">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card bg-transparent border-0 h-100 text-center d-flex flex-column">
                         <div class="card-body d-flex flex-column align-items-center">
                             <i class="fa-sharp fa-solid fa-clock fa-4x mb-3" style="color: #FFD43B;"></i>
