images issue fixed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!-- Interior Paints -->
                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
-                        <img src="./interior-paint.jpg" class="card-img-top " alt="Interior Paints">
+                        <img src="./images/interior-paint.jpg" class="card-img-top " alt="Interior Paints">
                         <div class="card-body">
                             <h4 class="card-title">Interior Paints</h4>
                             <p>Transform your indoor spaces with our premium interior paint collection</p>
@@ -65,7 +65,7 @@
                 <!-- Exterior Paints -->
                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
-                        <img src="./exterior-paint.jpg" class="card-img-top" alt="Exterior Paints">
+                        <img src="./images/exterior-paint.jpg" class="card-img-top" alt="Exterior Paints">
                         <div class="card-body">
                             <h4 class="card-title">Exterior Paints</h4>
                             <p>Weather-resistant solutions for lasting outdoor beauty</p>
@@ -77,7 +77,7 @@
                 <!-- Wood Coatings -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
-                        <img src="./wood-paint.jpg" class="card-img-top" alt="Wood Coatings">
+                        <img src="./images/wood-paint.jpg" class="card-img-top" alt="Wood Coatings">
                         <div class="card-body">
                             <h4 class="card-title">Wood Coatings</h4>
                             <p>Specialized coatings to protect and enhance natural wood</p>
@@ -89,7 +89,7 @@
                 <!-- Metal Paints -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 text-center">
-                        <img src="./metal-paint.jpg" class="card-img-top" alt="Metal Paints">
+                        <img src="./images/metal-paint.jpg" class="card-img-top" alt="Metal Paints">
                         <div class="card-body">
                             <h4 class="card-title">Metal Paints</h4>
                             <p>Durable metal protection with industrial-grade performance</p>
