--- a/index.html
+++ b/index.html
@@ -263,12 +263,13 @@
                     </p>
 
                     <!-- Social Icons -->
-                    <div class="mt-4">
-                        <a href="#" class="text-light me-3"><i class="fab fa-facebook-f fa-2x"></i></a>
-                        <a href="#" class="text-light me-3"><i class="fab fa-twitter fa-2x"></i></a>
-                        <a href="#" class="text-light me-3"><i class="fab fa-instagram fa-2x"></i></a>
-                        <a href="#" class="text-light"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                    <div class="mt-4 d-flex flex-wrap justify-content-start gap-3">
+                       <a href="#" class="text-light"><i class="fab fa-facebook-f fa-2x"></i></a>
+                       <a href="#" class="text-light"><i class="fab fa-twitter fa-2x"></i></a>
+                       <a href="#" class="text-light"><i class="fab fa-instagram fa-2x"></i></a>
+                       <a href="#" class="text-light"><i class="fab fa-linkedin-in fa-2x"></i></a>
                     </div>
+
                 </div>
 
                 <!-- Links Section (Quick Links + Products + Support) -->
